[package]
name = "r2d2_sled"
version = "0.1.0"
authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
license = "MIT"
description = "Sled support for the r2d2 connection pool"
repository = "https://github.com/weasy666/r2d2-sled"
documentation = "https://docs.rs/r2d2_sled"
keywords = ["sled", "r2d2", "pool"]
edition = "2018"

[dependencies]
r2d2 = "0.8"
sled = "0.34"
